Added search, add, edit, random

--- a/encyclopedia/templates/encyclopedia/Error404.html
+++ b/encyclopedia/templates/encyclopedia/Error404.html
@@ -11,7 +11,7 @@
 <main class="ercontent2">
     No such entry exist<br>
     <br>
-    Add this entry : <a href="#">addentry</a> 
+    Add this entry : <a href="{% url 'newEntry' %}">addentry</a> 
 </main>
 
 
