--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -6,7 +6,7 @@
 
 {%block body%} 
 <!-- <button type="button" class="btn btn-outline-primary">Edit</button>     -->
-<a href="wiki/{{entryTitle}}/edit" class="btn btn-outline-primary" type="button" style="margin-top: 30px;
+<a href="{{entryTitle}}/edit" class="btn btn-outline-primary" type="button" style="margin-top: 30px;
 width: 200px;">Edit Content</a>
     {{entry | safe }}
 
